# funding_bot

./: Cargo.toml  Dockerfile
.github/workflows/: main.yml
sql/: tables.sql
src/: main.rs  process_fundings.rs
src/bot/: callbacks.rs  commands.rs  mod.rs
src/extended/: mod.rs
src/hyperliquid/: mod.rs
src/paradex/: mod.rs
