[package]
name = "funding_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.99"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = "1.0.99"
serde_json = "1.0.99"
sqlx = "0.8.6"
itertools = "0.14.0"
rust_decimal = "1.37.2"
